# info2_projects

./: .gitignore  CMakeLists.txt  LICENSE  README.md
GameServer/: CMakeLists.txt  README.md  includes.hpp  request_helpers.cpp  request_helpers.hpp
GameServer/client/: CMakeLists.txt  main.cpp  request_helpers.cpp  request_helpers.hpp
GameServer/server/: CMakeLists.txt  checkers.cpp  classes.cpp  classes.hpp  main.cpp  mcts_algorithm.cpp  mcts_algorithm.hpp  request_helpers.cpp  request_helpers.hpp
MCT/: Makefile  README.md  field.cpp  field.hpp  main.cpp  ncurses_tst.cpp  tst.cpp
MCTS_checkers/: CMakeLists.txt  Doxyfile  README.md  README_DE.md  classes.cpp  classes.hpp  main.cpp  mcts_algorithm.cpp  mcts_algorithm.hpp  mcts_tree.txt  state.hpp  test.cpp  tests.cpp  tests.hpp
pvc_checkers/: Makefile  state.cpp  state_javadoc_chatgpt.hpp
pvp_checkers/: checkers  field.cpp  field.hpp
